src/objects/Management_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>COGS__c</fullName>
        <label>COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue__c</fullName>
        <label>Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Income__c</fullName>
        <label>Net Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operating_Expenses__c</fullName>
        <label>Operating Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Type__c</fullName>
        <label>Reporting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actuals</fullName>
                </value>
                <value>
                    <fullName>Projections</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Management Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Management Reporting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Management Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>